<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nano.baali.nanoinit.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appHeadingText"
        android:layout_centerHorizontal="true"
        android:textColor="#996600"
        android:textSize="16sp"
        android:id="@+id/textView"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnSpotifyText"
        android:id="@+id/spotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="#3399ff"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnScoresText"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify"
        android:layout_centerHorizontal="true"
        android:background="#3399ff"
        android:layout_marginTop="12dp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnLibraryText"
        android:id="@+id/library"
        android:layout_below="@+id/scores"
        android:layout_centerHorizontal="true"
        android:background="#3399ff"
        android:layout_marginTop="12dp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnBiggerText"
        android:id="@+id/bigger"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:background="#3399ff"
        android:layout_marginTop="12dp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnBaconText"
        android:id="@+id/bacon"
        android:layout_below="@+id/bigger"
        android:layout_centerHorizontal="true"
        android:background="#3399ff"
        android:layout_marginTop="12dp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="@string/btnMyApp"
        android:id="@+id/myApp"
        android:layout_below="@+id/bacon"
        android:layout_centerHorizontal="true"
        android:background="#661a4c"
        android:layout_marginTop="12dp"
        android:textColor="#ffffff"/>


</RelativeLayout>
